feat(satp-hermes): add vc verification
