# packages/cacti-asset-schema-architecture-plugin-satp/src/main/typescript/entities/registry/endpoints/verify-schema-profile-vc.ts
@@ -1,0 +1,101 @@
+import {
+  IAsyncProvider,
+  Logger,
+  LoggerProvider,
+} from "@hyperledger/cactus-common";
+import {
+  IEndpointAuthzOptions,
+  IExpressRequestHandler,
+  IWebServiceEndpoint,
+} from "@hyperledger/cactus-core-api";
+import type { Express, Request, Response } from "express";
+import {
+  handleRestEndpointException,
+  registerWebServiceEndpoint,
+} from "@hyperledger/cactus-core";
+import OAS from "../../../../json/openapi-asset-schema-architecture-bundled.json";
+import {
+  SchemaProfileVerifiableCredential,
+  VerificationResult,
+} from "../../../generated/asset-schema-architecture/typescript-axios/api";
+import { RegistryService } from "../../registry/modules/services/registry-service/implementations/registry-service";
+
+export class VerifySchemaProfileVCEndpoint implements IWebServiceEndpoint {
+  public static readonly CLASS_NAME = "VerifySchemaProfileVCEndpoint";
+
+  private readonly log: Logger;
+
+  public get className(): string {
+    return VerifySchemaProfileVCEndpoint.CLASS_NAME;
+  }
+
+  constructor(private readonly registryService: RegistryService) {
+    //const fnTag = `${this.className}#constructor()`;
+    //Checks.truthy(options, `${fnTag} arg options`);
+    //Checks.truthy(options.dispatcher, `${fnTag} arg options.connector`);
+
+    //const level = this.options.logLevel || "INFO";
+    const level = "INFO";
+    const label = this.className;
+    this.log = LoggerProvider.getOrCreate({ level, label });
+  }
+
+  public get oasPath(): (typeof OAS.paths)["/api/@hyperledger/cacti-asset-schema-architecture/registry/verify-schema-profile-vc"] {
+    return OAS.paths[
+      "/api/@hyperledger/cacti-asset-schema-architecture/registry/verify-schema-profile-vc"
+    ];
+  }
+  public async registerExpress(
+    expressApp: Express,
+  ): Promise<IWebServiceEndpoint> {
+    await registerWebServiceEndpoint(expressApp, this);
+    return this;
+  }
+
+  getVerbLowerCase(): string {
+    return this.oasPath.post["x-hyperledger-cacti"].http.verbLowerCase;
+  }
+
+  getPath(): string {
+    return this.oasPath.post["x-hyperledger-cacti"].http.path;
+  }
+
+  public getExpressRequestHandler(): IExpressRequestHandler {
+    return this.handleRequest.bind(this);
+  }
+
+  public getOperationId(): string {
+    return OAS.paths[
+      "/api/@hyperledger/cacti-asset-schema-architecture/registry/verify-schema-profile-vc"
+    ].post.operationId;
+  }
+
+  getAuthorizationOptionsProvider(): IAsyncProvider<IEndpointAuthzOptions> {
+    return {
+      get: async () => ({
+        isProtected: true,
+        requiredRoles: [],
+      }),
+    };
+  }
+  public async handleRequest(req: Request, res: Response): Promise<void> {
+    const fnTag = `${this.className}#handleRequest()`;
+    const reqTag = `${this.getVerbLowerCase()} - ${this.getPath()}`;
+    try {
+      const schemaProfileVC: SchemaProfileVerifiableCredential = req.body;
+      const verificationResult: VerificationResult =
+        await this.registryService.verifySchemaProfileVC(schemaProfileVC);
+      console.log("Schema Profile VC verification result:", verificationResult);
+      res.json(verificationResult);
+    } catch (exception) {
+      const errorMsg = `${reqTag} ${fnTag} Failed to transact: ${exception}`;
+      console.log("\n" + errorMsg + "\n");
+      handleRestEndpointException({
+        errorMsg,
+        log: this.log,
+        error: exception,
+        res,
+      });
+    }
+  }
+}
